# BINN

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  SHAPtest.ipynb  UtilForExamples.py  dev.ipynb  index.html  mkdocs.yml  objects.inv  poster_ndpia.ipynb  pyproject.toml  setup.py  test.ipynb
.github/workflows/: python-app.yml
binn/: ExplainerPlot.py  GraphAnalysis.py  NN.py  NNUtils.py  Network.py  Process.py  ShapExplainer.py  __init__.py  binn.py  explainer.py  feature_selection.py  importance_network.py  logger.py  network.py  plot.py  shap.py  sklearn.py
binn/analysis/: explainer.py  importance_network.py  plot.py
binn/model/: binn.py  dataloader.py  handler.py  pathway_network.py  sklearn.py  trainer.py  util.py
binn/plot/: network.py  sankey.py  util.py
binn_example/: index.html
colab/: BINN_colab.ipynb
data/: README.md  importance_df.csv  pathways.tsv  sample_datamatrix.csv  sample_design_matrix.tsv  translation.tsv
data/downloads/: mirbase_2_reactome_2025_01_16.txt  reactome_pathways_names_2025_01_21.txt  (+1 more)
docs/: binn_example.ipynb  index.md  reference.md  robustness.ipynb  shap_example.ipynb  sklearn_api.ipynb  util_for_examples.py
docs/reference/: binn_ref.md  (+7 more)
notebooks/: BINNtest.ipynb  SHAP_test.ipynb  SHAPtest.ipynb  sklearn_api.ipynb  util_for_examples.py
robustness/: index.html
shap_example/: index.html
sklearn_api/: index.html
snn/: NN.py  NNUtils.py  Network.py  Process.py
tests/: test_binn.py  test_explainer.py  test_importance_network.py  test_network.py  test_pathway_network.py
util_for_examples/: index.html
(+9 files in other folders)
